# aws-federated-auth

./: .gitignore  LICENSE  README.md  aws-federated-auth.spec  pyproject.toml
docs/: README.md
hooks/: hook-keyrings.cryptfile.py
shib/: awsshib.py  cli.py  ecpshib.py  shellcompletion.py
